--- a/WebContent/css/bootstrap.css
+++ b/WebContent/css/bootstrap.css
@@ -1954,7 +1954,7 @@ table {
 
 .table-hover tbody tr:hover td,
 .table-hover tbody tr:hover th {
-  background-color: #f0f0f0;
+  background-color: #ffffff;
 }
 
 table [class*=span],
